--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,12 @@
 <package format="2">
   <name>quantillion</name>
   <version>0.0.0</version>
-  <description>The quantillion package</description>
+  <description>Filtering Lidar Data</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ss@quantillion.com">ss</maintainer>
+  <maintainer email="todo@todo.com">ss</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
